fixed scrolling.js & a.pageup`s z-index

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1301,7 +1301,7 @@ h4 {
   position: fixed;
   bottom: 100px;
   right: 5%;
-  z-index: 30;
+  z-index: 19;
   background-color: #e950d7;
   cursor: pointer;
   border: 1px solid white;
